<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404040"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2"
            android:baselineAligned="false"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:id="@+id/music_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/yas_az_chi_begam"
                    android:scaleType="fitXY"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/singer"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/az_chi_begam"
                        android:textAlignment="viewStart"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/duration_az_chi_begam"
                        android:textAlignment="viewEnd"
                        android:textColor="#fff"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/music_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/yas_barcode"
                    android:scaleType="fitXY"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/singer"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/barcode"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/duration_barcode"
                        android:textAlignment="viewEnd"
                        android:textColor="#fff"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/music_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/yas_entezar"
                    android:scaleType="fitXY"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/singer"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/entezar"
                        android:textAlignment="viewStart"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/duration_entezar"
                        android:textAlignment="viewEnd"
                        android:textColor="#fff"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/music_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/yas_faryad"
                    android:scaleType="fitXY"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/singer"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/faryad"
                        android:textAlignment="viewStart"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/duration_faryad"
                        android:textAlignment="viewEnd"
                        android:textColor="#fff"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/music_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/yas_man_edameh_midam"
                    android:scaleType="fitXY"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/singer"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/edame_midam"
                        android:textAlignment="viewStart"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/duration_edame_midam"
                        android:textAlignment="viewEnd"
                        android:textColor="#fff"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/music_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/yas_nisti"
                    android:scaleType="fitXY"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/singer"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nisti"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/duration_nisti"
                        android:textAlignment="viewEnd"
                        android:textColor="#fff"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#606060"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_current_music"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/music_icon"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_current_singer_name"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/stop_name"
                    android:textSize="20sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/tv_current_playing_song"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/stop_music"
                    android:textSize="20sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/tv_duration_of_current_playing_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/stop_duration"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_previous"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="0dp"
                android:src="@drawable/previous_icon"/>

            <ImageView
                android:id="@+id/iv_play_pause"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/play_pause_icon"/>

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/next_icon"/>

            <ImageView
                android:id="@+id/iv_stop"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/stop_icon"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>